# Raspberry-Pi-DIY-Projects

./: .gitignore  ExplorerHat.md  FVMK0WJIA0WRZBF.py  GPIO-shutdown-sample.py  HOMEKIT.txt  Install Bluez Script  PRRC1.py  README.md  RPiLEDDemo.py  TrafficKit01.py  TrafficKit02.py  V=IR Calculator.py  adafruit-pi-oled-bonnet-setup.txt  adding-script-to-systemd.md  arduino-blinkt.ino  arduino-unicorn-hat-hd.ino  asound.md  bearable.py  berryCam.py  binary-clock.py  binary-meld.py  blinkt-notes.md  blinkt-setup-apt-adafruit-nodejs-node-red.txt  blinkt.py  blueberry.py  bme680_test.c  bmp180.py  build-an-arduino-controlled-usb-power-supply.md  charging-battery-while-drawing-current-from-it.md  checkInternet.py  chromacam.md  chromacam.py  clean-shutdown-pimoroni.txt  clipboard.txt  config-volumio.txt  configuration.yaml  control-mote-over-envirophat-lux-sensor.py  cpu traffic light.py  cpu-temperature-raspbian-nodejs.md  disabling-start-of-services-at-boot.md  (+69 more)
Adafruit-GPIO-Halt/: LICENSE  Makefile  README.md  gpio-halt.c
DisplaySwitcher/: Display Switcher.py  README.md
Face-and-Eye-detection-using-OpenCV-With-Raspberry-PI/: Face and eye detection using OpenCv With Raspberry pi.docx  face and eye.py
Face-detection-using-OpenCV-With-Raspberry-PI/: face detection.py
GPIO-crontab/: GPIO-crontab.txt
GarageDoorMonitor/: .gitignore  Makefile
HomeGuard/: README.md
Intelli-Home/: README.md
MIC_HATv1.0_for_raspberrypi/: Respeaker_2_Mics_Pi_HAT.md
MQTT-Monitor/: README.md  displayImg.sh  filelist  setup.sh  statusDisplay.py
MattHawkinsUK-rpispy-misc/: README.md
PNP_RPi3_AP/: README.md  ap.sh  install.sh
Pi-Web-Status-Display/: README.md  WAN_ping_display.py  highping.py  networktestservice.conf  ping_calculations.py  ping_calculations_API.py  temperature.py
Pi_Internet_Thing_Videos/: .gitignore  README.md
Pi_Physical_Dashboard/: .gitignore  README.md  aio_dashboard.py  auto_gauge.py  config.ini  config.py  demo.py  led_backpacks.py  main.py  requirements.txt  widget.py
RPI3_HOTSPOTS/: README.md  ap.sh  install.sh  interface.ap  interface.sta  interface_share.ap  interface_share.sta  shareWith.sh  sta.sh
RPiFileStorage/: README.md  ServerWebsiteHTML-Raw  Setup
STS-PiLot/: README.md  autostart.sh  camera_cv.py  config.py  io_wrapper.py
Smartphone-Doorlock/: doorlock.js  package.json
Tiny_4wd/: BlueDotPirate.py  BlueDotPirateMixed.py  TinyBluetoothKeyboard.py
Traffic counting System based on OpenCV and python/: vehicle_detection_counting.py
UnicornHAT/: LICENSE  README.md  cheertree.py  wordclock.py
UnicornHatHD-Weather-Clock/: README.md  weatherclock.py
Weather/: X10.py  icon_defs.py  icons.txt  weather.conf  weather.py
Webserver_code/: index.html  mult.c
_WebArticles/: 2017-best-bald-engineer-tutorials-articles-and-reviews.md  2017-best-how-to-s-fabrication-techniques-and-tool-hacks.md  23-betriebssysteme-für-den-raspberry-pi.md  5-projects-for-raspberry-pi-at-home.md  5-things-about-docker-on-raspberry-pi.md  5-things-you-can-do-with-the-raspberry-pi-camera-module.md  5v-mini-portable-power-supply.md  7” Portable Multitouch Raspberry Pi Tablet.md  9-cool-raspberry-pi-projects.md  A Raspberry Pi-Based Smart Home Solution.md  Adding Basic Audio Ouput to Raspberry Pi Zero.md  Arduino vs Raspberry Pi: Which Is The Mini Computer For You?.md  Arduino vs. Raspberry Pi: Mortal enemies, or best friends?.md  Backup Photos While Traveling With a Raspberry Pi - Part II.md  Backup Photos While Traveling With an iPad Pro and a Raspberry Pi.md  Best Raspberry Pi Projects.md  Build a Motion Capture Security System Using a Raspberry Pi.md  Cluster of Raspberry Pi Zeroes.md  Configuring the Raspberry Pi as an AirPrint Server.md  (+586 more)
adabox004/: CREDITS.TXT  (+2 more)
alexa-avs-sample-app/samples/wakeWordAgent/src/: CMakeLists.txt  GPIOWakeWordEngine.cpp  KittAiSnowboyWakeWordEngine.cpp  KittAiSnowboyWakeWordEngine.h  Logger.cpp  PortAudioWrapper.cpp  PortAudioWrapper.h  SensoryWakeWordEngine.cpp  SensoryWakeWordEngine.h  WakeWordEngine.h  WakeWordException.cpp  WakeWordException.h  WakeWordIPC.h  WakeWordIPCSocket.cpp  WakeWordUtils.h
smart-projects/alexa-avs-sample-app/samples/wakeWordAgent/tst/: CMakeLists.txt  main.cpp  testIPCFactory.h  testKittAi.cpp  testKittAi.h  testLogger.cpp  testSensory.cpp  testSensory.h
srollphat/scroll-phat-hd-rs/: Cargo.toml  LICENSE  README.md  deploy  update_doc
srollphat/scroll-phat-hd-rs/.cargo/: config
srollphat/scroll-phat-hd-rs/examples/: alphabet.rs  counter.rs
srollphat/scroll-phat-hd-rs/src/: display.rs  font.rs  lib.rs  scroller.rs  shared.rs
(+1990 files in other folders)
